# kent1325.github.io

./: .gitignore  CONTEXT.md  config.py  justfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: check.yml  deploy.yml
_posts/: 2016-11-23-welcome-to-jekyll.markdown
content/: profile.yaml
docs/: content-model.md  development-workflow.md  portfolio-plan.md  prd.md  tech-stack-rationale.md  v1-scope.md
portfolio/: config.py  footer.py  header.py  hero.py  portfolio.py  theme.py
portfolio/components/: about_me_section.py  contact_section.py  footer.py  navbar.py  profile_section.py  project_card.py  projects_section.py
portfolio/pages/: index.py
portfolio/states/: portfolio_state.py
src/portfolio/: build.py  content.py
templates/: blog_index.html  index.html
tests/: test_content.py
